refactor(api): 重构聊天模型类命名并优化客户端资源管理
- 将 ChatCompletionChunk 重命名为 ChatChunk
- 将 ChatCompletionMessage 重命名为 ChatMessage
- 将 ChatCompletionRequest 重命名为 ChatRequest
- 将 ChatCompletionResponse 重命名为 ChatResponse
- 为 OpenClawClient 和相关 HTTP 客户端实现 AutoCloseable 接口
- 添加安全关闭资源的工具方法 closeQuietly
- 统一日志框架为 lombok 注解方式
- 修复 WebSocket 客户端挑战调度器资源泄漏问题
- 优化模型 ID 编码处理逻辑
- 更新 README 中的类名引用