@@ -3,11 +3,10 @@ package io.github.partmeai.hermes.management;
 import java.util.List;
 import io.github.partmeai.hermes.api.common.HermesApiConstants;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
 
 import io.github.partmeai.hermes.api.HermesApi;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.extern.slf4j.Slf4j;
 
 /**
  * Manages Hermes model discovery via the API Server's {@code GET /v1/models} endpoint.
@@ -19,9 +18,8 @@ import org.slf4j.LoggerFactory;
  * @author Loong Wan
  * @see <a href="https://hermes-agent.nousresearch.com/docs/user-guide/features/api-server">Hermes API Server</a>
  */
+@Slf4j
 public class HermesModelManager {
-
-	private static final Logger logger = LoggerFactory.getLogger(HermesModelManager.class);
 
 	private final HermesApi api;
 
@@ -34,16 +32,16 @@ public class HermesModelManager {
 		try {
 			HermesApi.ListModelResponse response = this.api.listModels();
 			if (response.data() == null) return List.of();
-			return response.data().stream().map(HermesApi.ModelData::id).collect(Collectors.toList());
+			return response.data().stream().map(HermesApi.ModelData::id).toList();
 		} catch (Exception e) {
-			logger.warn("Failed to list models from Hermes API: {}", e.getMessage());
+			log.warn("Failed to list models from Hermes API: {}", e.getMessage());
 			return List.of();
 		}
 	}
 
 	public Optional<HermesApi.ModelResponse> getModel(String modelId) {
 		try { return Optional.ofNullable(this.api.getModel(modelId)); }
-		catch (Exception e) { logger.warn("Failed to get model '{}': {}", modelId, e.getMessage()); return Optional.empty(); }
+		catch (Exception e) { log.warn("Failed to get model '{}': {}", modelId, e.getMessage()); return Optional.empty(); }
 	}
 
 	public boolean isModelAvailable(String modelId) { return listModels().contains(modelId); }
